--- a/client/config.json
+++ b/client/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "OTAyMjYxNTY4OTk2MjQ1NTA0.YXb2kQ.30tqO4073Jks1UsHN2FWrgJr5I8",
+    "token": "",
     "prefix": "+",
     
     "nodes": [
